tests/miz/pass/types/pass_type_elaboration_distinct_reserved_variable_membership_001.miz
reserve x, y for set;
theorem DistinctReservedVariableMembershipPayloadBoundary: x in y;
