tests/miz/fail/substitution/fail_substitution_binder_collision_001.miz
scheme BinderCollision {
  P[set, set]
}:
  for x being set holds P[x, x]
provided
  for x being set holds P[x, y];
